# BitMLx

./: .gitignore  .gitlab-ci.yml  1.output  BitMLx_pipeline.sh  LICENSE  README.md  bitmlx.cabal  example.txt  exampleB.txt  exampleD.txt  outB.rkt  outD.rkt  read_statistics.py  replace_hash.py
app/: ExampleRunner.hs  Examples.hs  Main.hs
app/Examples/: Escrow.hs  MultichainLoanMediator.hs  MultichainPaymentExchange.hs  MutualTC.hs  NaiveExchangeLottery.hs  PriorityChoice.hs  ReceiverChosenDenomination.hs  SimpleExchange.hs  Split.hs  TwoPartyAgreement.hs  Withdraw.hs
examples/: outB-2p-mutual-tc.rkt  outB-ZD-lottery.rkt  outB-mul-secrets.rkt  outB-put.rkt  outD-2p-mutual-tc.rkt  outD-ZD-lottery.rkt  outD-mul-secrets.rkt  outD-put.rkt
new/: Auxiliary.hs  Compiler.hs  Examples.hs  Main.hs  Pretty.hs  Runner.hs  Syntax.hs
output/: 2PMutualTC_bitcoin.rkt  2PMutualTC_dogecoin.rkt  Escrow_bitcoin.rkt  Escrow_dogecoin.rkt  NaiveExchangeLottery_bitcoin.rkt  NaiveExchangeLottery_dogecoin.rkt  PriorityChoice_bitcoin.rkt  PriorityChoice_dogecoin.rkt  SimpleExchange_bitcoin.rkt  SimpleExchange_dogecoin.rkt  Split_bitcoin.rkt  Split_dogecoin.rkt  split_bitcoin.rkt  split_dogecoin.rkt  withdraw_bitcoin.rkt  withdraw_dogecoin.rkt
src/: Coins.hs  Compiler.hs  Depth.hs  Examples.hs  Main.hs  Pretty.hs  Syntax.hs  Trifunctor.hs
src/Compiler/: Advertisement.hs  Authorize.hs  Authorize.hs-boot  Auxiliary.hs  Common.hs  Contract.hs  Contract.hs-boot  Error.hs  Preconditions.hs  PriorityChoice.hs  PriorityChoice.hs-boot  Refund.hs  Reveal.hs  Reveal.hs-boot  Settings.hs  Split.hs  Split.hs-boot  StepSecrets.hs  Stipulation.hs  WellFormed.hs  Withdraw.hs
src/Syntax/: BitML.hs  BitMLx.hs  Common.hs
test/: Main.hs  TestSettings.hs  TestSplit.hs  TestStipulation.hs
test/TestAdvertisement/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestAuthorize/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestManyParticipantsPriorityChoice/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestManyParticipantsWithdraw/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestPriorityChoice/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestRefund/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestReveal/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestRevealIf/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestSplit/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestTimedPriorityChoice/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestWithdraw/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/TestWithdrawD/: BitMLx.hs  Bitcoin.hs  Dogecoin.hs  Test.hs
test/WellFormedFails/: InconsistentSplit.hs  InconsistentWithdraw.hs  NoDeposit.hs  UncommitedSecret.hs
