name:                bitmlx
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/linen101/bitmlx#readme
license:             BSD3
license-file:        LICENSE
author:              Chrysa Oikonomou
maintainer:          linen@protonmail.com
copyright:           2021, Some rights reserved
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      new
  exposed-modules:
    Runner
    Compiler
    Syntax
  other-modules:
    Auxiliary
    Trifunctor
    Pretty
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends: 
    text,
    prettyprinter,
    vector,      
    vector-algorithms,
    containers,
    base >= 4.7 && < 5
  default-language:    Haskell2010
    
executable bitmlx-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  other-modules:       Examples
  build-depends:
      base >=4.7 && <5
    , bitmlx
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010