name:                bitmlx
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/linen101/bitmlx#readme
license:             BSD3
license-file:        LICENSE
author:              Chrysa Oikonomou
maintainer:          linen@protonmail.com
copyright:           2021, Some rights reserved
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Coins
    Syntax.BitMLx
    Syntax.BitML
    Syntax.Common
    Compiler
    Pretty
  other-modules:
    Compiler.Common
    Compiler.Settings
    Compiler.Contract
    Compiler.Withdraw
    Compiler.Preconditions
    Compiler.PriorityChoice
    Auxiliary
    Trifunctor
  build-depends: 
    prettyprinter,
    vector,      
    vector-algorithms,
    containers,
    base >= 4.7 && < 5
  default-language:    Haskell2010
    
executable bitmlx-exe
  main-is:             Main.hs
  hs-source-dirs:      app
  other-modules:
    Examples.PriorityChoice
  build-depends:
      base >=4.7 && <5
    , bitmlx
    , text
    , prettyprinter
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010